--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:mysql://10.176.8.1:3306/unpx?useUnicode=true&useJDBCC
 spring.datasource.username=unpx
 spring.datasource.password=unpx@123
 
+spring.data.mongodb.database=diwaas
+spring.data.mongodb.host=10.176.8.11
+spring.data.mongodb.port=27017
