--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
+    "node-fetch": "^2.3.0",
+    "react-inputs-validation": "^2.1.3",
     "react-responsive-carousel": "^3.1.43",
     "react-router-dom": "^4.3.1",
+    "request": "^2.88.0",
+    "superagent": "^4.0.0",
     "url-loader": "^1.1.2"
   }
 }
