--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-inputs-validation": "^2.1.3",
     "react-responsive-carousel": "^3.1.43",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "request": "^2.88.0",
     "superagent": "^4.0.0",
     "url-loader": "^1.1.2"
